# Computaci-n-Gr-fica

./: README.md
Control Prc/src/: Source.cpp
Ejercicio 2_Triangulos que se iluminan/src/: Source.cpp
My_first_program_with_CMake/: CMakeLists.txt
Parcial Práctico/: CMakeLists.txt
Parcial Práctico/src/: Header.h  Source.cpp
Translaciones/: Readme.txt
Translaciones/src/: Header.h  Source.cpp
Triángulo de Sierpinski/src/: Header.h  Source.cpp
Tutorial 2/src/: Source.cpp
